# Livox-SDK2-Jazzy

./: CMakeLists.txt  README.md  package.xml
sdk_core/: CMakeLists.txt
sdk_core/comm/: define.h
sdk_core/logger_handler/: file_manager.h
